ミスの修正

--- a/www/index.html
+++ b/www/index.html
@@ -229,9 +229,9 @@
 
     <div id="remain">Remaining time</div>
     <div id="time">Time</div>
-    <button id="Start">ButtonA</button>  
-    <button id="Stop">ButtonB</button>  
-    <button id="Set">ButtonC</button>  
+    <button id="btnA">Start</button>  
+    <button id="btnB">Stop</button>  
+    <button id="btnC">Set</button>  
     <input type="number" id="minute" value=3 >
     <input type="number" id="second" value=0 >
 </body>
