バグの修正とラベルの改善

--- a/www/index.html
+++ b/www/index.html
@@ -213,7 +213,7 @@
            analog(rest); 
        }
 
-       if(ret<=0){
+       if(rest<=0){
            actie = false;
            alarm();
        }
@@ -229,9 +229,9 @@
 
     <div id="remain">Remaining time</div>
     <div id="time">Time</div>
-    <button id="btnA">Start</button>  
-    <button id="btnB">Stop</button>  
-    <button id="btnC">Set</button>  
+    <button id="btnA">開始</button>  
+    <button id="btnB">停止</button>  
+    <button id="btnC">設定</button>  
     <input type="number" id="minute" value=3 >
     <input type="number" id="second" value=0 >
 </body>
