ラベルを日本語にした

--- a/www/index.html
+++ b/www/index.html
@@ -230,11 +230,11 @@
 <body>
     <canvas id="mycanvas" width="200" height="200">Test</canvas>
 
-    <div id="minuteStr">〇</div>
-    <div id="secondStr">〇</div>
+<div id="minuteStr">分</div>
+<div id="secondStr">秒</div>
 
-    <div id="remain">Remaining time</div>
-    <div id="time">Time</div>
+<div id="remain">残り時間</div>
+<div id="time">経過時間</div>
     <button id="btnA">開始</button>  
     <button id="btnB">停止</button>  
     <button id="btnC">設定</button>  
