--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="components/loader.js"></script>
   <script src="lib/onsenui/js/onsenui.min.js"></script>
   <link rel="stylesheet" href="components/loader.css">
@@ -221,6 +222,7 @@
         period = rest;
         active = true;
         startTime = new Date();
+        }
     }
     function btnEClick(e){
         alert('1分に設定しました');
@@ -228,7 +230,6 @@
         $('#second').val(0);
         btnCClick(e);
     }
-}
 
     
  
@@ -246,6 +247,7 @@
            alarm();
        }
     } 
+}
 
   </script>
 </head>
